  - [oarextratime] add functionality: extra time can now be requested for job
    (increase the walltime). See the oarextratime command and oar.conf
  - [scheduler] fix the besteffort + deploy VS adv. reservation case
  - [api] some improvement in the Apache configuration and tests
  - [finaud] bugfix: make pingchecker run only on resources of type default

version 2.5.7:
--------------

This version mainly brings a security fix for the oarsh command. It is highly
recommended to upgrade (server, frontend(s) and nodes), since all previous
versions of OAR are affected. 

  - [oarsh] fix a security hole when passing option to OpenSSH. See oar.conf to
    adapt settings to your setup, if required (OARSH_* variables)
  - [oarsh] dropped the mechanism to select whether to use oarsh or fall back 
    to ssh, given a list of hostname patterns
  - [oarsub] fix the job-key information of the manual page
  - [oarsub] handle cases where trailing spaces were breaking oarsub script directives
  - [api] added an example of Apache configuration for the authentication 
  - [documentation] improve the SSH keys setup explanations for OAR installation

version 2.5.6:
--------------

  - [oar.conf] add the SCHEDULER_MIN_TIME_BETWEEN_2_CALLS option
  - [metascheduler] fix a bug with advance reservations when predicted resources
         must be recomputed
  - [metascheduler] fix a bug with advance reservations with standby start job
         types (noop/cosystem/deploy=standby)
  - [oar-node init] create /var/run/sshd if needed
  - [oarsub] fix several bugs with the array job submission
  - [oarstat] allow using Perl's YAML::Syck for a quicker YAML output
  - [oarstat] improve performance and information for the --gantt option
  - [oarstat] prettier print of job events
  - [oarnodesetting] optimize grouped operations on resources and add a lock
         around property changes
  - [oaradmissionrules] fix bug: changing a rule priority does not enable it